--- a/roundtrip_path_planner/Evaluation.ipynb
+++ b/roundtrip_path_planner/Evaluation.ipynb
@@ -9,50 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "################################\n",
-    "# Import the necessary libraries\n",
-    "################################\n",
+    "from IPPerfMonitor import IPPerfMonitor\n",
+    "import IPBasicPRM\n",
+    "import IPVISBasicPRM\n",
+    "import IPVisibilityPRM\n",
+    "import IPVISVisibilityPRM\n",
     "\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import networkx as nx\n",
-    "import heapq\n",
-    "import math\n",
+    "import IPLazyPRM\n",
+    "import IPVISLazyPRM\n",
     "\n",
-    "################################\n",
-    "# Import the necessary libraries\n",
-    "################################\n",
+    "import IPRRT\n",
+    "import IPVISRRT\n",
     "\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import networkx as nx\n",
-    "import heapq\n",
-    "import math\n",
-    "\n",
-    "import IPAStar as IPAStar\n",
-    "import IPBasicPRM as IPBasicPRM\n",
-    "import IPLazyPRM as IPLazyPRM\n",
-    "import IPPRMBase as IPPRMBase\n",
-    "import IPRRT as IPRRT\n",
-    "import IPVisibilityPRM as IPVisibilityPRM\n",
-    "\n",
-    "import IPVISBasicPRM as IPVISBasicPRM\n",
-    "import IPVISLazyPRM as IPVISLazyPRM\n",
-    "import IPVISVisibilityPRM as IPVISVisibilityPRM\n",
-    "import IPVISAStar as IPVISAStar\n",
-    "import IPVISRRT as IPVISRRT\n",
-    "\n",
-    "import IPPerfMonitor as IPPerfMonitor\n",
-    "import IPBenchmark as IPBenchmark\n",
-    "import IPEnvironment as Environment\n",
-    "import IPTestSuiteSS2023 as IPTestSuiteSS2023\n",
-    "import IPPlanerBase as IPPlanerBase\n",
-    "\n",
-    "import roundtrip_path_planner as roundtrip_path_planner"
+    "import IPAStar\n",
+    "import IPVISAStar"
    ]
   },
   {
@@ -85,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +68,7 @@
        "<module 'roundtrip_path_planner' from '/home/moritz_s/Documents/RKIM_1/Roboterprogrammierung/Projektarbeit_Robot_Path_Planning/Roundtrip_Path_Planning/roundtrip_path_planner/roundtrip_path_planner.py'>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -118,15 +92,15 @@
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "module 'IPPerfMonitor' has no attribute 'clearData'",
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'list' and 'int'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m Environment_Test \u001b[38;5;241m=\u001b[39m fullBenchList[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m      8\u001b[0m Planen \u001b[38;5;241m=\u001b[39m roundtrip_path_planner\u001b[38;5;241m.\u001b[39mRoundtrip_Path_Planner(Environment_Test\u001b[38;5;241m.\u001b[39mstartList, Environment_Test\u001b[38;5;241m.\u001b[39mgoalList, Environment_Test ,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbasePRM\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 9\u001b[0m \u001b[43mPlanen\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplan\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Documents/RKIM_1/Roboterprogrammierung/Projektarbeit_Robot_Path_Planning/Roundtrip_Path_Planning/roundtrip_path_planner/roundtrip_path_planner.py:134\u001b[0m, in \u001b[0;36mRoundtrip_Path_Planner.plan\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    132\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlanning: \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m key \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m - \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39menvironment\u001b[38;5;241m.\u001b[39mname)\n\u001b[1;32m    133\u001b[0m planner \u001b[38;5;241m=\u001b[39m producer[\u001b[38;5;241m0\u001b[39m](\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39menvironment\u001b[38;5;241m.\u001b[39mcollisionChecker) \u001b[38;5;66;03m# Aufruf erstes Element aus producer (Klasse des Planers) und Aufruf der Methode Benchmark.collisionChecker\u001b[39;00m\n\u001b[0;32m--> 134\u001b[0m \u001b[43mIPPerfMonitor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mclearData\u001b[49m() \u001b[38;5;66;03m# Löscht die Daten aus dem Dataframe des Performance Monitors\u001b[39;00m\n\u001b[1;32m    136\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"TBD: Evtl. Anpassung des Auswahlverfahrens für das nächste Ziel\"\"\"\u001b[39;00m\n\u001b[1;32m    137\u001b[0m usedstart \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstartpos\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'IPPerfMonitor' has no attribute 'clearData'"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[23], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m Environment_Test \u001b[38;5;241m=\u001b[39m fullBenchList[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m      8\u001b[0m Planen \u001b[38;5;241m=\u001b[39m roundtrip_path_planner\u001b[38;5;241m.\u001b[39mRoundtrip_Path_Planner(Environment_Test\u001b[38;5;241m.\u001b[39mstartList, Environment_Test\u001b[38;5;241m.\u001b[39mgoalList, Environment_Test ,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbasePRM\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 9\u001b[0m \u001b[43mPlanen\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplan\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/RKIM_1/Roboterprogrammierung/Projektarbeit_Robot_Path_Planning/Roundtrip_Path_Planning/roundtrip_path_planner/roundtrip_path_planner.py:143\u001b[0m, in \u001b[0;36mRoundtrip_Path_Planner.plan\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    141\u001b[0m min_distance \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minf\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    142\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m goal \u001b[38;5;129;01min\u001b[39;00m goals:\n\u001b[0;32m--> 143\u001b[0m     distance \u001b[38;5;241m=\u001b[39m math\u001b[38;5;241m.\u001b[39msqrt((\u001b[43musedstart\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mgoal\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m) \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m+\u001b[39m (usedstart[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m-\u001b[39m goal[\u001b[38;5;241m1\u001b[39m]) \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m    144\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m distance \u001b[38;5;241m<\u001b[39m min_distance:\n\u001b[1;32m    145\u001b[0m         min_distance \u001b[38;5;241m=\u001b[39m distance\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'list' and 'int'"
      ]
     }
    ],
