--- a/roundtrip_path_planner/Evaluation.ipynb
+++ b/roundtrip_path_planner/Evaluation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,10 @@
     "import IPVISRRT\n",
     "\n",
     "import IPAStar\n",
-    "import IPVISAStar"
+    "import IPVISAStar\n",
+    "\n",
+    "import roundtrip_path_planner\n",
+    "import IPTestSuiteSS2023"
    ]
   },
   {
@@ -59,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +71,7 @@
        "<module 'roundtrip_path_planner' from '/home/moritz_s/Documents/RKIM_1/Roboterprogrammierung/Projektarbeit_Robot_Path_Planning/Roundtrip_Path_Planning/roundtrip_path_planner/roundtrip_path_planner.py'>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,27 +83,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "basePRM [<class 'IPBasicPRM.BasicPRM'>, {'radius': 3, 'numNodes': 200}, <function basicPRMVisualize at 0x72b1875396c0>]\n",
-      "Planning: basePRM - Trap\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'list' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[23], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m Environment_Test \u001b[38;5;241m=\u001b[39m fullBenchList[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m      8\u001b[0m Planen \u001b[38;5;241m=\u001b[39m roundtrip_path_planner\u001b[38;5;241m.\u001b[39mRoundtrip_Path_Planner(Environment_Test\u001b[38;5;241m.\u001b[39mstartList, Environment_Test\u001b[38;5;241m.\u001b[39mgoalList, Environment_Test ,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbasePRM\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 9\u001b[0m \u001b[43mPlanen\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplan\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Documents/RKIM_1/Roboterprogrammierung/Projektarbeit_Robot_Path_Planning/Roundtrip_Path_Planning/roundtrip_path_planner/roundtrip_path_planner.py:143\u001b[0m, in \u001b[0;36mRoundtrip_Path_Planner.plan\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    141\u001b[0m min_distance \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minf\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    142\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m goal \u001b[38;5;129;01min\u001b[39;00m goals:\n\u001b[0;32m--> 143\u001b[0m     distance \u001b[38;5;241m=\u001b[39m math\u001b[38;5;241m.\u001b[39msqrt((\u001b[43musedstart\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mgoal\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m) \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m+\u001b[39m (usedstart[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m-\u001b[39m goal[\u001b[38;5;241m1\u001b[39m]) \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m    144\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m distance \u001b[38;5;241m<\u001b[39m min_distance:\n\u001b[1;32m    145\u001b[0m         min_distance \u001b[38;5;241m=\u001b[39m distance\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'list' and 'int'"
+      "visibilityPRM [<class 'IPVisibilityPRM.VisPRM'>, {'ntry': 300}, <function visibilityPRMVisualize at 0x776cc8ec1760>]\n",
+      "Planning: visibilityPRM - Trap\n",
+      "PLANNING ERROR ! PLANNING ERROR ! PLANNING ERROR \n",
+      "PLANNING ERROR ! PLANNING ERROR ! PLANNING ERROR \n",
+      "PLANNING ERROR ! PLANNING ERROR ! PLANNING ERROR \n"
      ]
     }
    ],
@@ -112,7 +106,11 @@
     "fullBenchList = IPTestSuiteSS2023.benchList\n",
     "Environment_Test = fullBenchList[0]\n",
     "\n",
-    "Planen = roundtrip_path_planner.Roundtrip_Path_Planner(Environment_Test.startList, Environment_Test.goalList, Environment_Test ,\"basePRM\")\n",
+    "test_startlist =[[10,15]] \n",
+    "test_goallist = [[10,1], [10,5], [10,8]]\n",
+    "\n",
+    "# Planen = roundtrip_path_planner.Roundtrip_Path_Planner(Environment_Test.startList, Environment_Test.goalList, Environment_Test ,\"basePRM\")\n",
+    "Planen = roundtrip_path_planner.Roundtrip_Path_Planner(test_startlist, test_goallist, Environment_Test ,\"visibilityPRM\")\n",
     "Planen.plan()"
    ]
   },
