--- a/roundtrip_path_planner/Evaluation_Trap.ipynb
+++ b/roundtrip_path_planner/Evaluation_Trap.ipynb
@@ -133,7 +133,7 @@
     "\n",
     "# Planen = roundtrip_path_planner.Roundtrip_Path_Planner(Environment_Test.startList, Environment_Test.goalList, Environment_Test ,\"basePRM\")\n",
     "Planen = roundtrip_path_planner.Roundtrip_Path_Planner(StartList, GoalList, Environment_Test ,\"basePRM\")\n",
-    "Results.append(Planen.plan())"
+    "Results.append(Planen.plan())\n"
    ]
   },
   {
@@ -413,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
