--- a/roundtrip_path_planner/Evaluation_Trap.ipynb
+++ b/roundtrip_path_planner/Evaluation_Trap.ipynb
@@ -133,7 +133,7 @@
     "\n",
     "# Planen = roundtrip_path_planner.Roundtrip_Path_Planner(Environment_Test.startList, Environment_Test.goalList, Environment_Test ,\"basePRM\")\n",
     "Planen = roundtrip_path_planner.Roundtrip_Path_Planner(StartList, GoalList, Environment_Test ,\"basePRM\")\n",
-    "Results.append(Planen.plan())\n"
+    "Results.append(Planen.plan())"
    ]
   },
   {
