Performance Data CSVs erstellt

--- a/roundtrip_path_planner/Evaluation.ipynb
+++ b/roundtrip_path_planner/Evaluation.ipynb
@@ -107,8 +107,7 @@
     "\n",
     "zusatz Benchmarks:\n",
     "\n",
-    "- Triangle fun\n",
-    "- 4 Rehtecke\n",
+    "- 4 Rechtecke\n",
     "- vojo_1020"
    ]
   },
